feat: add VM mode with SSH access to real Linux environments
- Add VM mode with WebSocket SSH client for real terminal access
- Create backend SSH proxy server (Express + ws + ssh2)
- Add 4 VM configuration with connection management
- Include golden VM setup script for automated provisioning
- Add comprehensive deployment documentation
- Add helper scripts for VM management and health checks
- Update .gitignore for security (credentials, keys, .env)

--- a/student_TUI_demo/.gitignore
+++ b/student_TUI_demo/.gitignore
@@ -34,3 +34,12 @@ dist-ssr
 .worktrees/
 .security-key
 logs/security/
+
+# Credentials and secrets
+SETUP_COMPLETE.md
+*credentials*
+*.pem
+*.key
+!*.pub
+server/.env
+.student-tui-config/
